--- a/loginPage.html
+++ b/loginPage.html
@@ -39,9 +39,17 @@
 </head>
 
 <body>
-    <form id="login_form" action="login">
-        <input id="email_input" type="email" placeholder="Enter your email...">
-        <input id="password_input" type="password" placeholder="Enter your password...">
+    <form id="login_form">
+        <input id="email_input" name="email_input" type="email" placeholder="Enter your email...">
+        <input id="password_input" name="password_input" type="password" placeholder="Enter your password...">
         <input id="login_button" type="submit">
     </form>
+
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script type="text/javascript">
+        $("#login_form").on("submit", function(event){
+          event.preventDefault();
+          console.log($(this).serializeArray());
+        });
+    </script>
 </body>
