--- a/manageUsers.html
+++ b/manageUsers.html
@@ -1,9 +1,19 @@
 <!DOCTYPE html>
 <html>
-    <div id="create_user">
-
-    </div>
-    <div id="remove_user">
-
-    </div>
+    <body>
+        <div id="create_user">
+            <form>
+                <label for="email">Enter email for new user.</label>
+                <input type="email">
+                <label for="password">Enter starting password for new user.</label>
+                <input type="password">
+            </form>
+        </div>
+        <div id="remove_user">
+            <form>
+                <label for="email">Enter email of user to remove.</label>
+                <input type="email">
+            </form>
+        </div>
+    </body>
 </html>
