--- a/manageUsers.html
+++ b/manageUsers.html
@@ -6,16 +6,43 @@
     <body>
         <div id="create_user">
             <form id="create_form">
-                <input id="email_input" type="email" placeholder="Enter email of new user...">
-                <input id="password_input" type="password" placeholder="Enter initial password for new user...">
+                <input id="name_input" placeholder="Enter name of new publisher...">
+                <input id="email_input_create" type="email" placeholder="Enter email of new publisher...">
                 <input id="create_button" type="submit" value="Create User">
             </form>
         </div>
         <div id="remove_user">
             <form id="remove_form">
-                <input id="email_input" type="email" placeholder="Enter email of user to remove...">
+                <input id="email_input_remove" type="email" placeholder="Enter email of user to remove...">
                 <input id="remove_button" type="submit" value="Remove User">
             </form>
         </div>
     </body>
+    <script type="text/javascript">
+        $("#create_form").on("submit", function(event){
+          event.preventDefault();
+          // Store the form inputs into an array.
+          var form_inputs = $("#create_form").serializeArray();
+
+          // Store the email and password in their own variables.
+          var name = form_inputs[0].value;
+          var email = form_inputs[1].value;
+
+          // Base domain path.
+          var domain_path = 'https://cardiff.jellypro.xyz';
+
+          var data = {
+              param_name: name,
+              param_email: email
+          }
+
+          fetch(domain_path + '/api/v1/publisher/', {
+              method: 'PUT',
+              body: JSON.stringify(data)
+          })
+          .then((response) => {
+              console.log(response);
+          })
+        });
+    </script>
 </html>
