tal update with lang tags

--- a/mainPage.html
+++ b/mainPage.html
@@ -1,3 +1,4 @@
+<html lang="en">
 <head>
     <link rel="stylesheet" type="text/css" href="10SecondCity.css" media="screen" />
     <script src="MainPage.js"></script>
@@ -10,6 +11,7 @@
             <button onclick="openPage('loginPage.html')">Login</button>
             <button onclick="openPage('mainPage.html')">Home</button>
             <button onclick="openPage('createPost.html')">New Post</button>
+            <button onclick="openPage('manageUsers.html')">Manage Users</button>
         </div>
     </header>
 
@@ -23,9 +25,10 @@
     </template>
     
     <script>
-        loadPosts();
+        //loadPosts();
         interestButtons();
     </script>
 
-
+    <img src="logo.png" width="100px"></body>
 </body>
+</html>
